# XDP-on-GPU

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  REFACTORING_SUMMARY.md  build.sh
doc/benchmark_results_20250718_153209/: make_bench_output.txt  test_performance_cpu_detailed.txt  test_performance_detailed.txt
example/: CMakeLists.txt  Makefile  README.md  build_simple.sh  cuda_kernel.cu  dpdk_example.c  dpdk_example.cpp  multi_backend_example.cpp  opencl_kernel.cl  simple_example.cpp  simple_packet_filter.cu  simple_packet_filter_cl.cl  simple_test.sh
examples/: README.md  simple_packet_filter_cl.cl  simple_usage.cpp
include/: cuda_event_processor.h  ebpf_gpu_processor.hpp  error_handling.hpp  gpu_backend.hpp  gpu_device_manager.hpp  kernel_loader.hpp
poc/: CMakeLists.txt  simple_opencl_example.cpp
src/: CMakeLists.txt  backend_factory.cpp  cuda_backend.cpp  cuda_event_processor.cpp  ebpf_gpu_processor.cpp  ebpf_gpu_processor_impl.hpp  error_handling.cpp  gpu_device_manager.cpp  kernel_loader.cpp  opencl_backend.cpp
src/cuda/: CMakeLists.txt  cuda_device_manager.cpp  ebpf_gpu_processor.cpp  ebpf_gpu_processor_impl.hpp  gpu_device_manager.cpp  kernel_loader.cpp
src/opencl/: CMakeLists.txt  ebpf_gpu_processor.cpp  ebpf_gpu_processor_impl.hpp  gpu_device_manager.cpp  kernel_loader.cpp  opencl_backend.cpp  opencl_device_manager.cpp
tests/: CMakeLists.txt  cuda_kernels.cu  example_usage.cpp  test_basic.cpp  test_c_api.cpp  test_config.h.in  test_device_manager.cpp  test_error_handling.cpp  test_event_processor.cpp  test_gpu_backend.cpp  test_integration.cpp  test_kernel.h  test_kernel_loader.cpp  test_main.cpp  test_opencl.cl  test_performance.cpp  test_performance_cpu.cpp  test_ptx.ptx  test_utils.hpp
tests/kernels/: cuda_kernels.cu  opencl_kernels.cl  test_kernels.cu
